[project]
name = "uralsteel-llm-router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "googleapis-common-protos>=1.72.0",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "markdownify>=1.2.0",
    "openai>=2.7.1",
    "playwright>=1.56.0",
    "requests>=2.32.5",
]
