[project]
name = "uralsteel-llm-router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "googleapis-common-protos>=1.72.0",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "markdownify>=1.2.0",
    "minio>=7.2.18",
    "openai>=2.7.1",
    "playwright>=1.56.0",
    "pymupdf>=1.26.7",
    "requests>=2.32.5",
    "tavily-python>=0.7.13",
    "tzdata>=2025.3",
]

[tool.pylint.format]
max-line-length = 80
